about side finish

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <nav id="navbar-container" data-visible="false" class="navbar-container">
             <ul class="navbar-list d-flex flex-col gap-2">
-                <li class="navbar-item t-h5"><a href="#about">About</a></li>
+                <li class="navbar-item t-h5"><a href="assets\html\about.html">About</a></li>
                 <li class="navbar-item t-h5"><a href="#">Services</a></li>
                 <li class="navbar-item t-h5"><a href="#">Portfolio</a></li>
                 <li class="navbar-item t-h5"><a href="#">Blog</a></li>
@@ -545,12 +545,12 @@
 
         <div class="section-footer d-flex flex-col justify-center align-center w-100 gap-4">
         
-            <h4>Personal</h4>
+            <h4><a href="#">Personal</a></h4>
         
             <div class="sec menu-sec">
                 <h5 class="orange-title">MENU</h5>
                 <ul>
-                    <li><a class="a-white" href="#">About</a></li>
+                    <li><a class="a-white" href="assets\html\about.html">About</a></li>
                     <li><a class="a-white" href="#">Services</a></li>
                     <li><a class="a-white" href="#">Blog</a></li>
                     <li><a class="a-white" href="#">Contact</a></li>
