--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <nav id="navbar-container" data-visible="false" class="navbar-container">
             <ul class="navbar-list d-flex flex-col gap-2">
                 <li class="navbar-item t-h5"><a href="assets\html\about.html">About</a></li>
-                <li class="navbar-item t-h5"><a href="#">Services</a></li>
-                <li class="navbar-item t-h5"><a href="#">Portfolio</a></li>
-                <li class="navbar-item t-h5"><a href="#">Blog</a></li>
+                <li class="navbar-item t-h5"><a href="assets\html\about.html">Services</a></li>
+                <li class="navbar-item t-h5"><a href="#" class="disabled">Portfolio</a></li>
+                <li class="navbar-item t-h5"><a href="#" class="disabled">Blog</a></li>
             </ul>
             <button class="btn btn-transparent">CONTACT</button>
         </nav>
@@ -551,19 +551,19 @@
                 <h5 class="orange-title">MENU</h5>
                 <ul>
                     <li><a class="a-white" href="assets\html\about.html">About</a></li>
-                    <li><a class="a-white" href="#">Services</a></li>
-                    <li><a class="a-white" href="#">Blog</a></li>
-                    <li><a class="a-white" href="#">Contact</a></li>
+                    <li><a class="a-white" href="assets\html\about.html">Services</a></li>
+                    <li><a class="a-white disabled" href="#">Blog</a></li>
+                    <li><a class="a-white disabled" href="#">Contact</a></li>
                 </ul>
             </div>
         
             <div class="sec service-sec">
                 <h5 class="orange-title">SERVICE</h5>
                 <ul>
-                    <li><a class="a-white" href="#">Design</a></li>
-                    <li><a class="a-white" href="#">Development</a></li>
-                    <li><a class="a-white" href="#">Marketing</a></li>
-                    <li><a class="a-white" href="#">See More</a></li>
+                    <li><a class="a-white disabled" href="#">Design</a></li>
+                    <li><a class="a-white disabled" href="#">Development</a></li>
+                    <li><a class="a-white disabled" href="#">Marketing</a></li>
+                    <li><a class="a-white disabled" href="#">See More</a></li>
                 </ul>
             </div>
         
