--- a/assets/html/services.html
+++ b/assets/html/services.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/dist/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <script defer src="../js/nav.js"></script>
     <script defer src="../js/index.js"></script>
+    <script defer src="../js/nav.js"></script>
     <title>Home</title>
 </head>
 
