tab name updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav id="navbar-container" data-visible="false" class="navbar-container">
             <ul class="navbar-list d-flex flex-col gap-2">
                 <li class="navbar-item t-h5"><a href="assets\html\about.html">About</a></li>
-                <li class="navbar-item t-h5"><a href="assets\html\about.html">Services</a></li>
+                <li class="navbar-item t-h5"><a href="assets\html\services.html">Services</a></li>
                 <li class="navbar-item t-h5"><a href="#" class="disabled">Portfolio</a></li>
                 <li class="navbar-item t-h5"><a href="#" class="disabled">Blog</a></li>
             </ul>
@@ -551,7 +551,7 @@
                 <h5 class="orange-title">MENU</h5>
                 <ul>
                     <li><a class="a-white" href="assets\html\about.html">About</a></li>
-                    <li><a class="a-white" href="assets\html\about.html">Services</a></li>
+                    <li><a class="a-white" href="assets\html\services.html">Services</a></li>
                     <li><a class="a-white disabled" href="#">Blog</a></li>
                     <li><a class="a-white disabled" href="#">Contact</a></li>
                 </ul>
