--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script defer src="../js/index.js"></script>
     <script defer src="../js/nav.js"></script>
-    <title>Home</title>
+    <title>About</title>
 </head>
 
 <body id="about">
